--- a/portfolio.html
+++ b/portfolio.html
@@ -10,10 +10,6 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-  />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Portfolio</title>
   </head>
@@ -37,6 +33,7 @@
 
     <main>
       <section>
+        <!-- <h1>Portfolio</h1> -->
         <ul class="filter-list">
           <li class="filter-list-item"><button type="button">All</button></li>
           <li class="filter-list-item"><button type="button">Web Site</button></li>
@@ -48,16 +45,16 @@
           <li class="cards-item">
             <a href="#">
               <img src="./images/portfolio/portolio01-min.jpg" alt="portfolio-card1" width="360" />
-              <h3 class="title-two">Banking App Interface Concept</h3>
-              <p>App</p>
+              <h2 class="title-two">Banking App Interface Concept</h2>
+              <p class="cards-text">App</p>
             </a>
           </li>
 
           <li class="cards-item">
             <a href="#">
-              <img src="./images/portfolio/portolio01-min.jpg" alt="portfolio-card2" width="360" />
-              <h3 class="title-two">Cashless Payment</h3>
-              <p>Marketing</p>
+              <img src="./images/portfolio/portolio02-min.jpg" alt="portfolio-card2" width="360" />
+              <h2 class="title-two">Cashless Payment</h2>
+              <p class="cards-text">Marketing</p>
               <p class="hide">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                 Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -68,56 +65,56 @@
           <li class="cards-item">
             <a href="#">
               <img src="./images/portfolio/portolio03-min.jpg" alt="portfolio-card3" width="360" />
-              <h3 class="title-two">Meditaion App</h3>
-              <p>App</p>
+              <h2 class="title-two">Meditaion App</h2>
+              <p class="cards-text">App</p>
             </a>
           </li>
 
           <li class="cards-item">
             <a href="#">
               <img src="./images/portfolio/portolio04-min.jpg" alt="portfolio-card4" width="360" />
-              <h3 class="title-two">Taxi Service</h3>
-              <p>Marketing</p>
+              <h2 class="title-two">Taxi Service</h2>
+              <p class="cards-text">Marketing</p>
             </a>
           </li>
 
           <li class="cards-item">
             <a href="#">
               <img src="./images/portfolio/portolio05-min.jpg" alt="portfolio-card5" width="360" />
-              <h3 class="title-two">Screen Illustrations</h3>
-              <p>Design</p>
+              <h2 class="title-two">Screen Illustrations</h2>
+              <p class="cards-text">Design</p>
             </a>
           </li>
 
           <li class="cards-item">
             <a href="#">
               <img src="./images/portfolio/portolio06-min.jpg" alt="portfolio-card6" width="360" />
-              <h3 class="title-two">Online Courses</h3>
-              <p>Marketing</p>
+              <h2 class="title-two">Online Courses</h2>
+              <p class="cards-text">Marketing</p>
             </a>
           </li>
 
           <li class="cards-item">
             <a href="#">
               <img src="./images/portfolio/portolio07-min.jpg" alt="portfolio-card7" width="360" />
-              <h3 class="title-two">Instagram Stories Concept</h3>
-              <p>Design</p>
+              <h2 class="title-two">Instagram Stories Concept</h2>
+              <p class="cards-text">Design</p>
             </a>
           </li>
 
           <li class="cards-item">
             <a href="#">
               <img src="./images/portfolio/portolio08-min.jpg" alt="portfolio-card8" width="360" />
-              <h3 class="title-two">Organic Food</h3>
-              <p>Web Site</p>
+              <h2 class="title-two">Organic Food</h2>
+              <p class="cards-text">Web Site</p>
             </a>
           </li>
 
           <li class="cards-item">
             <a href="#">
               <img src="./images/portfolio/portolio09-min.jpg" alt="portfolio-card9" width="360" />
-              <h3 class="title-two">Fresh Coffee</h3>
-              <p>Web Site</p>
+              <h2 class="title-two">Fresh Coffee</h2>
+              <p class="cards-text">Web Site</p>
             </a>
           </li>
         </ul>
