--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>WebStudio</title>
   </head>
   <body>
+    <!-- header -->
     <header>
       <a class="logo" href="./index.html"><span>Web</span>studio</a>
       <nav>
@@ -34,6 +31,7 @@
         </ul>
       </nav>
     </header>
+    <!-- hero -->
     <main>
       <section>
         <h1 class="first-section-title">
@@ -43,9 +41,10 @@
         <button class="button" type="button">Order Service</button>
       </section>
       <section>
+        <!-- <h2>features</h2> -->
         <ul class="section-list">
           <li class="section-list-item">
-            <h2 class="title-two">Strategy</h2>
+            <h3 class="title-two">Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the perfect and
               creative solution.
@@ -75,6 +74,7 @@
           </li>
         </ul>
       </section>
+      <!-- examples -->
       <section>
         <h2 class="title">What are we doing</h2>
         <ul class="photo-list">
@@ -89,32 +89,34 @@
           </li>
         </ul>
       </section>
+      <!-- team -->
       <section>
         <h2 class="title">Our Team</h2>
         <ul class="team-list">
           <li class="team-list-item">
             <img src="./images/team/img1-min.jpg" alt="team_photo1" width="264" />
             <h3 class="title-two">Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <p class="team-list-text">Product Designer</p>
           </li>
           <li class="team-list-item">
             <img src="./images/team/img2-min.jpg" alt="team_photo2" width="264" />
             <h3 class="title-two">Tom Ford</h3>
-            <p>Frontend developer</p>
+            <p class="team-list-text">Frontend developer</p>
           </li>
           <li class="team-list-item">
             <img src="./images/team/img3-min.jpg" alt="team_photo3" width="264" />
             <h3 class="title-two">Camila Garcia</h3>
-            <p>Marketing</p>
+            <p class="team-list-text">Marketing</p>
           </li>
           <li class="team-list-item">
             <img src="./images/team/img4-min.jpg" alt="team_photo4" width="264" />
             <h3 class="title-two">Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <p class="team-list-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
+    <!-- footer -->
     <footer class="footer">
       <a class="logo" href="./index.html"><span>Web</span>studio</a>
       <p class="footer-text">
