--- a/portfolio.html
+++ b/portfolio.html
@@ -14,118 +14,193 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <header>
-      <a class="logo" href="./index.html"><span>Web</span>studio</a>
-      <nav>
-        <ul class="header-list">
-          <li><a class="header-list-item" href="./index.html">Studio</a></li>
-          <li><a class="header-list-item" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="header-list-item" href="#">Contacts</a></li>
-        </ul>
-        <ul class="header-info">
-          <li>
-            <a class="header-info-item" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li><a class="header-info-item" href="tel:+11(000)111-11-11">+11(000) 111-11-11</a></li>
-        </ul>
-      </nav>
+    <header class="header-cont">
+      <div class="container">
+        <nav class="header-container">
+          <a class="logo" href="./index.html"><span>Web</span>studio</a>
+
+          <ul class="header-list">
+            <li class="header-list-item">
+              <a class="header-list-link" href="./index.html">Studio</a>
+            </li>
+            <li class="header-list-item">
+              <a class="header-list-link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="header-list-item"><a class="header-list-link" href="#">Contacts</a></li>
+          </ul>
+          <ul class="header-info">
+            <li class="info-item">
+              <a class="info-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="info-item">
+              <a class="info-link" href="tel:+11(000)111-11-11">+11(000) 111-11-11</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <main>
-      <section>
+      <section class="section portfolio-sctn">
         <!-- <h1>Portfolio</h1> -->
-        <ul class="filter-list">
-          <li class="filter-list-item"><button type="button">All</button></li>
-          <li class="filter-list-item"><button type="button">Web Site</button></li>
-          <li class="filter-list-item"><button type="button">App</button></li>
-          <li class="filter-list-item"><button type="button">Design</button></li>
-          <li class="filter-list-item"><button type="button">Marketing</button></li>
-        </ul>
-        <ul class="cards">
-          <li class="cards-item">
-            <a href="#">
-              <img src="./images/portfolio/portolio01-min.jpg" alt="portfolio-card1" width="360" />
-              <h2 class="title-two">Banking App Interface Concept</h2>
-              <p class="cards-text">App</p>
-            </a>
-          </li>
+        <div class="container filter-cont">
+          <ul class="filter-list">
+            <li class="filter-list-item"><button class="btn" type="button">All</button></li>
+            <li class="filter-list-item"><button class="btn" type="button">Web Site</button></li>
+            <li class="filter-list-item"><button class="btn" type="button">App</button></li>
+            <li class="filter-list-item"><button class="btn" type="button">Design</button></li>
+            <li class="filter-list-item"><button class="btn" type="button">Marketing</button></li>
+          </ul>
+        </div>
+        <div class="container cards-cont">
+          <ul class="cards">
+            <li class="cards-item">
+              <a href="#">
+                <img
+                  class="cards-img"
+                  src="./images/portfolio/portolio01-min.jpg"
+                  alt="portfolio-card1"
+                  width="360"
+                />
+                <div class="cards-txt">
+                  <h2 class="title-two">Banking App Interface Concept</h2>
+                  <p class="cards-text">App</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="cards-item">
-            <a href="#">
-              <img src="./images/portfolio/portolio02-min.jpg" alt="portfolio-card2" width="360" />
-              <h2 class="title-two">Cashless Payment</h2>
-              <p class="cards-text">Marketing</p>
-              <p class="hide">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
-                Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-              </p>
-            </a>
-          </li>
+            <li class="cards-item">
+              <a href="#">
+                <img
+                  class="cards-img"
+                  src="./images/portfolio/portolio02-min.jpg"
+                  alt="portfolio-card2"
+                  width="360"
+                />
+                <div class="cards-txt">
+                  <h2 class="title-two">Cashless Payment</h2>
+                  <p class="cards-text">Marketing</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="cards-item">
-            <a href="#">
-              <img src="./images/portfolio/portolio03-min.jpg" alt="portfolio-card3" width="360" />
-              <h2 class="title-two">Meditaion App</h2>
-              <p class="cards-text">App</p>
-            </a>
-          </li>
+            <li class="cards-item">
+              <a href="#">
+                <img
+                  class="cards-img"
+                  src="./images/portfolio/portolio03-min.jpg"
+                  alt="portfolio-card3"
+                  width="360"
+                />
+                <div class="cards-txt">
+                  <h2 class="title-two">Meditaion App</h2>
+                  <p class="cards-text">App</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="cards-item">
-            <a href="#">
-              <img src="./images/portfolio/portolio04-min.jpg" alt="portfolio-card4" width="360" />
-              <h2 class="title-two">Taxi Service</h2>
-              <p class="cards-text">Marketing</p>
-            </a>
-          </li>
+            <li class="cards-item">
+              <a href="#">
+                <img
+                  class="cards-img"
+                  src="./images/portfolio/portolio04-min.jpg"
+                  alt="portfolio-card4"
+                  width="360"
+                />
+                <div class="cards-txt">
+                  <h2 class="title-two">Taxi Service</h2>
+                  <p class="cards-text">Marketing</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="cards-item">
-            <a href="#">
-              <img src="./images/portfolio/portolio05-min.jpg" alt="portfolio-card5" width="360" />
-              <h2 class="title-two">Screen Illustrations</h2>
-              <p class="cards-text">Design</p>
-            </a>
-          </li>
+            <li class="cards-item">
+              <a href="#">
+                <img
+                  class="cards-img"
+                  src="./images/portfolio/portolio05-min.jpg"
+                  alt="portfolio-card5"
+                  width="360"
+                />
+                <div class="cards-txt">
+                  <h2 class="title-two">Screen Illustrations</h2>
+                  <p class="cards-text">Design</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="cards-item">
-            <a href="#">
-              <img src="./images/portfolio/portolio06-min.jpg" alt="portfolio-card6" width="360" />
-              <h2 class="title-two">Online Courses</h2>
-              <p class="cards-text">Marketing</p>
-            </a>
-          </li>
+            <li class="cards-item">
+              <a href="#">
+                <img
+                  class="cards-img"
+                  src="./images/portfolio/portolio06-min.jpg"
+                  alt="portfolio-card6"
+                  width="360"
+                />
+                <div class="cards-txt">
+                  <h2 class="title-two">Online Courses</h2>
+                  <p class="cards-text">Marketing</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="cards-item">
-            <a href="#">
-              <img src="./images/portfolio/portolio07-min.jpg" alt="portfolio-card7" width="360" />
-              <h2 class="title-two">Instagram Stories Concept</h2>
-              <p class="cards-text">Design</p>
-            </a>
-          </li>
+            <li class="cards-item">
+              <a href="#">
+                <img
+                  class="cards-img"
+                  src="./images/portfolio/portolio07-min.jpg"
+                  alt="portfolio-card7"
+                  width="360"
+                />
+                <div class="cards-txt">
+                  <h2 class="title-two">Instagram Stories Concept</h2>
+                  <p class="cards-text">Design</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="cards-item">
-            <a href="#">
-              <img src="./images/portfolio/portolio08-min.jpg" alt="portfolio-card8" width="360" />
-              <h2 class="title-two">Organic Food</h2>
-              <p class="cards-text">Web Site</p>
-            </a>
-          </li>
+            <li class="cards-item">
+              <a href="#">
+                <img
+                  class="cards-img"
+                  src="./images/portfolio/portolio08-min.jpg"
+                  alt="portfolio-card8"
+                  width="360"
+                />
+                <div class="cards-txt">
+                  <h2 class="title-two">Organic Food</h2>
+                  <p class="cards-text">Web Site</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="cards-item">
-            <a href="#">
-              <img src="./images/portfolio/portolio09-min.jpg" alt="portfolio-card9" width="360" />
-              <h2 class="title-two">Fresh Coffee</h2>
-              <p class="cards-text">Web Site</p>
-            </a>
-          </li>
-        </ul>
+            <li class="cards-item">
+              <a href="#">
+                <img
+                  class="cards-img"
+                  src="./images/portfolio/portolio09-min.jpg"
+                  alt="portfolio-card9"
+                  width="360"
+                />
+                <div class="cards-txt">
+                  <h2 class="title-two">Fresh Coffee</h2>
+                  <p class="cards-text">Web Site</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
+    <!-- footer -->
     <footer class="footer">
-      <a class="logo" href="./index.html"><span>Web</span>studio</a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital marketing & growth
-        solutions.
-      </p>
+      <div class="container footer-cont">
+        <a class="logo logo-footer" href="./index.html"><span>Web</span>studio</a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with digital marketing & growth
+          solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
